2010-12-27 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules, packaging/rpm/amanda.spec.src: add missing
	   amservice entry to set perms at install time. Thanks to vpatton for
	   finding this.

2010-12-23  Dustin J. Mitchell <dustin@mozilla.com>
	* client-src/client_util.c: improve error message when no includes
	  match on disk

2010-12-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Add FAILURE.

2010-12-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Use 'blocksize' to compute the
	  available space.

2010-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Fix parsing 'PARTIAL taper' line with no part.
	* perl/Amanda/DB/Catalog.pm: Ditto

2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Don't fail on trailing NUL bytes.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c: Use client_port.

2010-12-14  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.

2010-12-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactive.pm: rename finished_cb to request_cb.
	* installcheck/Amanda_Recovery_Scan.pl,
	  perl/Amanda/Interactive/stdin.pm,
	  perl/Amanda/Recovery/Scan.pm, server-src/amcheckdump.pl,
	  server-src/amfetchdump.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: s/finished_cb/request_cb/

2010-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: inventory must return the same as
				       read_label.
	* server-src/amtape.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_disk.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_rait.pl: Fix for new inventory.

2010-12-11  Daniel Néri <dne@mayonnaise.net>